Fixed border shifting elements bug for content-links

--- a/src/App.css
+++ b/src/App.css
@@ -245,6 +245,7 @@ nav {
   display: flex;
   padding-right: 2rem;
   padding-bottom: .76rem;
+  border-bottom: 2px solid transparent;
 }
 
 .content-link:hover {
